--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
         <maven>3.0.0</maven>
     </prerequisites>
 
-    <artifactId>dropwizard-example</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <groupId>io.dropwizard</groupId>
-    <name>Dropwizard Example Application</name>
+    <artifactId>wedder-api</artifactId>
+    <version>0.0.1</version>
+    <groupId>com.hardhand</groupId>
+    <name>Wedder API Application</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,10 +17,10 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <!-- You'll probably want to remove this for your project. We're just using it here
-             so that dropwizard-example doesn't get deployed as a library. -->
+             so that wedder doesn't get deployed as a library. -->
         <maven.deploy.skip>true</maven.deploy.skip>
         <!-- You'll probably want to remove this for your project. We'Re just using it here
-             so that dropwizard-example site doesn't get staged and deployed. -->
+             so that wedder site doesn't get staged and deployed. -->
         <maven.site.skip>true</maven.site.skip>
         <maven.site.deploy.skip>true</maven.site.deploy.skip>
     </properties>
@@ -36,9 +36,10 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <!-- This declares the version of all the dependencies used in the project -->
                 <groupId>io.dropwizard</groupId>
                 <artifactId>dropwizard-bom</artifactId>
-                <version>${project.version}</version>
+                <version>1.0.0-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -242,7 +243,7 @@
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>com.example.helloworld.HelloWorldApplication</mainClass>
+                            <mainClass>com.hardhand.wedder.WedderApplication</mainClass>
                         </transformer>
                     </transformers>
                 </configuration>
